# stx-docs

./: .gitignore  .gitreview  .zuul.yaml  README.md  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/: Makefile  requirements.txt  setup.cfg
doc/source/: conf.py  contributing.rst  index.rst
doc/source/api-ref/: index.rst
doc/source/contributor/: api_contribute_guide.rst  build_guide.rst  development_process.rst  doc_contribute_guide.rst  index.rst  release_note_contribute_guide.rst
doc/source/deployment_guides/: aio_duplex.rst  aio_duplex_computes.rst  aio_simplex.rst  controller_storage.rst  dedicated_storage.rst  index.rst  ironic.rst  multi_region.rst  options.rst  planning.rst
doc/source/deployment_guides/current/: controller_storage.rst  dedicated_storage.rst  duplex.rst  simplex.rst
doc/source/deployment_guides/latest/: deployment_terminology.rst
doc/source/developer_guide/: index.rst
doc/source/developer_resources/: architecture_docs.rst  index.rst  navigate_source_code.rst
doc/source/installation_guide/: controller_storage.rst  dedicated_storage.rst  deployment_terminology.rst  duplex.rst  index.rst  installation_libvirt_qemu.rst  simplex.rst
doc/source/introduction/: box.rst  index.rst  intro.rst  kubernetes.rst  openstack.rst  roadmap.rst  software_evaluation.rst
doc/source/operation_guides/: api_reference.rst  ceph_storage_config.rst  cli_reference.rst  fault_management.rst  index.rst  sdn_networking.rst  upgrade_guide.rst
doc/source/releasenotes/: index.rst
doc/source/user/: index.rst
docs/: setup.cfg
(+56 files in other folders)
