[metadata]
name = starlingxdocs
summary = StarlingX Documentation
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://starlingx.io
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: Documentation

[build_sphinx]
all_files = 1
warning-is-error = 1
build-dir = doc/build
source-dir = doc/source
