[metadata]
name = stx-docs
summary = StarlingX Documentation
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://starlingx.io
classifier =
Environment :: OpenStack
Intended Audience :: Information Technology
License :: OSI Approved :: Apache Software License
Operating System :: POSIX :: Linux
Topic :: Documentation

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]

[build_sphinx]
all_files = 1
build-dir = build
source-dir = source

[wheel]
universal = 1

[pbr]
warnerrors = True
